# context-driven-documentation

./: CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  README.pt-BR.md  SOCRATES_V2_IMPROVEMENTS.md  TESTING_CHECKLIST.md  pyproject.toml
.cdd/: config.yaml
.cdd/templates/: bug-ticket-template.yaml  config.yaml
.cddoc/: config.yaml
.cddoc/templates/: project.yaml
.claude/commands/: exec-auto.md  exec.md  init-command.md  plan.md  socrates.md  sync-docs.md
docs/features/: TEMPLATE.md  exec-auto-command.md  exec-command.md  init-command.md  new-command.md  plan-command.md  socrates.md  sync-docs-command.md
docs/guides/: CLI_REFERENCE.md  GETTING_STARTED.md  SOCRATES_GUIDE.md
examples/: example-bug-spec.yaml  example-feature-spec.yaml  example-spike-spec.yaml
specs/: project.yaml
specs/features/: init-command.yaml  new-command.yaml
specs/tickets/bug-socrates-error-file-load/: plan.md  spec.yaml
specs/tickets/enhancement-improve-init-cmd-next-steps/: spec.yaml
specs/tickets/enhancement-shorthand-ticket-paths/: plan.md  spec.yaml
specs/tickets/feature-add-documentation-support/: plan.md  spec.yaml
specs/tickets/feature-command-plan/: plan.md  spec.yaml
specs/tickets/feature-exec-command/: plan.md  spec.yaml
specs/tickets/feature-pt-br-language-support/: plan.md  progress.yaml  spec.yaml
src/cddoc/: DEPRECATED.md  cli.py  init.py  new_ticket.py  socrates.py
src/cddoc/commands/en/: socrates.md
src/cddoc/handlers/: __init__.py  archive_handler.py  base_handler.py  constitution_handler.py  spec_handler.py  ticket_handler.py
src/cddoc/templates/: feature-doc-template.md  feature.yaml
tests/: __init__.py  test_archive_handler.py  test_config.py  test_init.py  test_new_ticket.py  test_path_resolver.py  test_progress_handler.py  test_socrates.py  test_spec_handler.py  test_translations.py
(+1 files in other folders)
